--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="green4">#039588</color>
     <color name="green2">#92DAD2</color>
     <color name="green3">#008C80</color>
-    <color name="green5">#6BBCB5</color>
+    <color name="green5">#68BFB8</color>
 
     <color name="list_even">#FFF5F5</color>
     <color name="list_odd">#F3FFFF</color>
