--- a/app/src/main/res/layout/activity_match_success.xml
+++ b/app/src/main/res/layout/activity_match_success.xml
@@ -80,6 +80,7 @@
                 android:textStyle="bold"/>
 
             <Button
+                android:id="@+id/later_button"
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
