--- a/app/src/main/res/layout/card_person.xml
+++ b/app/src/main/res/layout/card_person.xml
@@ -42,12 +42,18 @@
             android:textColor="@color/white"
             android:text="alguien"
             android:textSize="20sp"/>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:text=","
+            android:textSize="20sp"/>
         <TextView
             android:id="@+id/card_person_age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:text="26"
