--- a/app/src/main/res/layout/fragment_register_3.xml
+++ b/app/src/main/res/layout/fragment_register_3.xml
@@ -78,7 +78,8 @@
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginRight="8dp"
-                    android:padding="40dp"
+                    android:scaleType="centerInside"
+                    android:padding="4dp"
                     android:background="@drawable/border_white_green_round"
                     android:src="@drawable/icon_camera" />
 
@@ -87,7 +88,8 @@
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginLeft="8dp"
-                    android:padding="40dp"
+                    android:scaleType="centerInside"
+                    android:padding="4dp"
                     android:src="@drawable/icon_camera"
                     android:background="@drawable/border_white_green_round"/>
 
@@ -108,7 +110,8 @@
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginRight="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:background="@drawable/border_white_green_round"
                         android:src="@drawable/icon_camera"/>
 
@@ -117,7 +120,8 @@
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginLeft="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:src="@drawable/icon_camera"
                         android:background="@drawable/border_white_green_round"/>
 
@@ -139,7 +143,8 @@
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginRight="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:background="@drawable/border_white_green_round"
                         android:src="@drawable/icon_camera"/>
 
@@ -148,7 +153,8 @@
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginLeft="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:src="@drawable/icon_camera"
                         android:background="@drawable/border_white_green_round"/>
 
