--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,7 @@
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginRight="50dp"
+                android:focusable="true"
                 android:background="@drawable/border_green_soft_transparent_round"
                 android:hint="@string/hint1"
                 android:padding="8dp"
@@ -73,6 +74,7 @@
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginRight="50dp"
+                android:focusable="true"
                 android:background="@drawable/border_green_soft_transparent_round"
                 android:hint="@string/hint2"
                 android:padding="8dp"
